# Customer-Support-Ticket-Routing-Env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  llm_policy.py  models.py  openenv.yaml  pre_validate.sh  pyproject.toml  requirements.txt  train_trl.py  validate-submission.sh
artifacts/: summary_metrics.json
docs/: BLOG_POST.md  SUBMISSION_CHECKLIST.md
scripts/: before_after_demo.py
server/: Dockerfile  app.py  config.py  environment.py  llm_remote.py  logging_utils.py  requirements.txt
server/domain/: __init__.py  incidents.py  reward.py  rng.py  roles.py
tests/: conftest.py  test_environment.py  test_incidents.py  test_reward.py
